--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,9 @@
         <version>6-beta-1</version>
     </parent>
 
-    <groupId>org.jboss.msc</groupId>
+    <groupId>com.seeburger.as</groupId>
     <artifactId>jboss-msc</artifactId>
-    <version>1.0.2.GA</version>
+    <version>1.0.2.SEE1-SNAPSHOT</version>
     <name>JBoss Modular Service Container</name>
 
     <properties>
